--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -81,7 +81,7 @@
     <style name="NameTextInputLayoutStyle" parent="Widget.AppCompat.EditText" >
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/score_text_color</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:textColorHint">@color/score_hint_text_color</item>
         <item name="android:hint">Oyuncu</item>
         <item name="android:layout_weight">1</item>
