--- a/app/src/main/res/layout/partner_game_round_item.xml
+++ b/app/src/main/res/layout/partner_game_round_item.xml
@@ -2,12 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:background="@color/main_background_color"
     android:id="@+id/partnerGameItemBackground">
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/NameTextInputLayoutStyle"
+        app:boxStrokeWidth="0dp"
         android:id="@+id/team1ScoreHint">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/team1Score"
@@ -20,6 +22,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/NameTextInputLayoutStyle"
+        app:boxStrokeWidth="0dp"
         android:id="@+id/team2ScoreHint">
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/team2Score"
