--- a/app/src/main/res/layout/finished_game_partner_item.xml
+++ b/app/src/main/res/layout/finished_game_partner_item.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     app:cardElevation="10dp"
     app:cardCornerRadius="20dp"
-    app:cardBackgroundColor="@color/white"
+    android:outlineSpotShadowColor="@color/cardview_shadow_color"
+    app:cardBackgroundColor="@color/cardview_background_color"
     android:layout_margin="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -57,7 +58,6 @@
         <TextView
             android:id="@+id/team2Name"
             style="@style/NameTextViewStyle"
-            android:layout_marginEnd="4dp"
             app:layout_constraintEnd_toStartOf="@+id/winnerTextViewImageView2"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -65,7 +65,6 @@
         <TextView
             android:id="@+id/team2TotalScore"
             style="@style/ScoreTextViewStyle"
-            android:layout_marginEnd="4dp"
             app:layout_constraintEnd_toStartOf="@+id/winnerTextViewImageView2"
             app:layout_constraintTop_toBottomOf="@+id/team2Name" />
 
