--- a/app/src/main/res/layout/finished_game_single_item.xml
+++ b/app/src/main/res/layout/finished_game_single_item.xml
@@ -6,7 +6,8 @@
     android:layout_height="wrap_content"
     app:cardElevation="10dp"
     app:cardCornerRadius="20dp"
-    app:cardBackgroundColor="@color/white"
+    android:outlineSpotShadowColor="@color/cardview_shadow_color"
+    app:cardBackgroundColor="@color/cardview_background_color"
     android:layout_margin="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
