--- a/app/src/main/res/layout/fragment_finished_single_game.xml
+++ b/app/src/main/res/layout/fragment_finished_single_game.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/main_background_color"
     tools:context=".ui.finishedSingleGame.FinishedSingleGameFragment">
-
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchView"
@@ -27,16 +27,21 @@
         app:theme="@style/SearchViewStyle"
         app:tint="@color/searchview_text_color" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/finishedGameRecyclerView"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:paddingBottom="16dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchView" />
+        app:layout_constraintTop_toBottomOf="@+id/searchView">
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/finishedGameRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:paddingBottom="16dp" />
+    </ScrollView>
 
     <TextView
         android:id="@+id/recordNotFound"
@@ -50,6 +55,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
