--- a/app/src/main/res/layout/fragment_save_single_game.xml
+++ b/app/src/main/res/layout/fragment_save_single_game.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".ui.finishedSingleGame.FinishedSingleGameFragment">
+    tools:context=".ui.finishedSingleGame.FinishedSingleGameFragment"
+    android:background="@color/main_background_color">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -14,7 +15,7 @@
             android:id="@+id/toolBar"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:background="@color/purple_700"
+            android:background="@color/toolbar_background_color"
             app:layout_constraintTop_toTopOf="parent">
 
             <RelativeLayout
@@ -35,7 +36,7 @@
                     android:layout_marginStart="10dp"
                     android:layout_toEndOf="@+id/goToFinishedGameViewFragment"
                     android:text="@string/single_game"
-                    android:textColor="@color/button_text_color"
+                    android:textColor="@color/toolbar_text_color"
                     android:textSize="16sp"
                     android:textStyle="bold" />
             </RelativeLayout>
@@ -47,10 +48,11 @@
             style="@style/SingleGameTextInputLayoutStyle"
             android:layout_marginTop="16dp"
             android:hint="@string/enter_player1_name"
-            app:boxStrokeColor="@color/score_hint_text_color"
+            app:boxStrokeColor="@color/text_input_layout_box_stroke_color"
             app:counterEnabled="true"
             app:counterMaxLength="20"
-            app:counterTextColor="@color/score_hint_text_color"
+            app:hintTextColor="@color/text_input_layout_hint_color"
+            app:counterTextColor="@color/text_input_layout_counter_text_color"
             app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -68,10 +70,11 @@
             android:id="@+id/player2NameEntryHint"
             style="@style/SingleGameTextInputLayoutStyle"
             android:hint="@string/enter_player2_name"
-            app:boxStrokeColor="@color/score_hint_text_color"
+            app:boxStrokeColor="@color/text_input_layout_box_stroke_color"
             app:counterEnabled="true"
             app:counterMaxLength="20"
-            app:counterTextColor="@color/score_hint_text_color"
+            app:hintTextColor="@color/text_input_layout_hint_color"
+            app:counterTextColor="@color/text_input_layout_counter_text_color"
             app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -88,10 +91,11 @@
             android:id="@+id/player3NameEntryHint"
             style="@style/SingleGameTextInputLayoutStyle"
             android:hint="@string/enter_player3_name"
-            app:boxStrokeColor="@color/score_hint_text_color"
+            app:boxStrokeColor="@color/text_input_layout_hint_color"
             app:counterEnabled="true"
             app:counterMaxLength="20"
-            app:counterTextColor="@color/score_hint_text_color"
+            app:hintTextColor="@color/text_input_layout_hint_color"
+            app:counterTextColor="@color/text_input_layout_counter_text_color"
             app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -109,10 +113,11 @@
             android:id="@+id/player4NameEntryHint"
             style="@style/SingleGameTextInputLayoutStyle"
             android:hint="@string/enter_player4_name"
-            app:boxStrokeColor="@color/score_hint_text_color"
+            app:boxStrokeColor="@color/text_input_layout_hint_color"
             app:counterEnabled="true"
             app:counterMaxLength="20"
-            app:counterTextColor="@color/score_hint_text_color"
+            app:hintTextColor="@color/text_input_layout_hint_color"
+            app:counterTextColor="@color/text_input_layout_counter_text_color"
             app:errorEnabled="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -128,11 +133,12 @@
 
         <Button
             android:id="@+id/confirmNames"
-            style="@style/SingleGameButtonStyle"
-            android:layout_gravity="end"
+            style="@style/ButtonStyle"
+            android:layout_width="match_parent"
             android:text="@string/save_names"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/player4NameEntryHint" />
 
         <TextView
@@ -269,18 +275,24 @@
 
         <Button
             android:id="@+id/saveGame"
-            style="@style/SingleGameButtonStyle"
+            style="@style/ButtonStyle"
+            android:layout_width="0dp"
             android:text="@string/save"
             android:visibility="invisible"
-            app:layout_constraintEnd_toEndOf="@+id/scoreLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/newRound"
             app:layout_constraintTop_toBottomOf="@id/scoreLayout" />
 
         <Button
             android:id="@+id/newRound"
-            style="@style/SingleGameButtonStyle"
+            style="@style/ButtonStyle"
+            android:layout_width="0dp"
             android:text="@string/new_round"
             android:visibility="invisible"
             app:layout_constraintEnd_toStartOf="@+id/saveGame"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/scoreLayout" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
