--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,12 +1,10 @@
 <resources >
     <style name="Theme.OkeyScore" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/main_background_color</item>
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-
+        <item name="android:statusBarColor">@color/status_bar_color</item>
+        <item name="colorPrimary">@color/primary_color</item>
+        <item name="colorPrimaryDark">@color/primary_color</item>
+        <item name="android:colorPrimaryDark">@color/primary_color</item>
+        <item name="android:windowLightStatusBar">false</item>
     </style>
 
 </resources>
