--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,19 +11,20 @@
     <color name="primary_color">#000000</color>
     <color name="date_text_color">#45494A</color>
     <color name="info_text_color">#45494A</color>
-    <color name="name_text_color">#000000</color>
-    <color name="score_text_color">#45494A</color>
-    <color name="score_hint_text_color">#000000</color>
+    <color name="name_text_color">#292F33</color>
+    <color name="score_text_color">#292F33</color>
+    <color name="score_hint_text_color">#292F33</color>
     <color name="separator_color">#45494A</color>
-    <color name="fab_text_color">#45494A</color>
+    <color name="fab_text_color">#292F33</color>
     <color name="fab_background_color">#4CAF50</color>
-    <color name="title_text_color">#45494A</color>
-    <color name="error_text_color">#45494A</color>
+    <color name="fab_icon_color">#FFFFFF</color>
+    <color name="title_text_color">#292F33</color>
+    <color name="error_text_color">#292F33</color>
     <color name="stroke_color">#45494A</color>
     <color name="main_background_color">#FFFFFF</color>
     <color name="button_text_color">#FFFFFF</color>
     <color name="icon_color">#777E80</color>
-    <color name="searchview_text_color">#45494A</color>
+    <color name="searchview_text_color">#292F33</color>
     <color name="min_score_color">#8022D11B</color>
     <color name="max_score_color">#80FF0000</color>
     <color name="item_background_color1">#FFFFFF</color>
@@ -33,17 +34,17 @@
     <color name="snackbar_background_color">#4CAF50</color>
     <color name="snackbar_text_color">#FFFFFF</color>
     <color name="toolbar_background_color">#FFFFFF</color>
-    <color name="toolbar_text_color">#000000</color>
+    <color name="toolbar_text_color">#292F33</color>
     <color name="cardview_background_color">#FFFFFF</color>
     <color name="cardview_shadow_color">#000000</color>
     <color name="alert_dialog_background_color">#000000</color>
-    <color name="alert_dialog_button_text_color">#FFFFFF</color>
-    <color name="text_input_layout_text_color">#45494A</color>
-    <color name="text_input_layout_hint_color">#45494A</color>
-    <color name="text_input_layout_box_stroke_color">#000000</color>
-    <color name="text_input_layout_counter_text_color">#000000</color>
+    <color name="alert_dialog_button_text_color">#000000</color>
+    <color name="text_input_layout_text_color">#292F33</color>
+    <color name="text_input_layout_hint_color">#292F33</color>
+    <color name="text_input_layout_box_stroke_color">#292F33</color>
+    <color name="text_input_layout_counter_text_color">#292F33</color>
     <color name="cursor_color">#000000</color>
-    <color name="tablayout_text_color">#000000</color>
+    <color name="tablayout_text_color">#292F33</color>
     <color name="back_icon_color">#000000</color>
     <color name="button_background_color">#E8E8E8</color>
 
