--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -17,12 +17,13 @@
     <color name="separator_color">#FFFFFF</color>
     <color name="fab_text_color">#FFFFFF</color>
     <color name="fab_background_color">#4CAF50</color>
+    <color name="fab_icon_color">#FFFFFF</color>
     <color name="title_text_color">#FFFFFF</color>
     <color name="error_text_color">#FFFFFF</color>
     <color name="stroke_color">#45494A</color>
     <color name="main_background_color">#121212</color>
     <color name="button_text_color">#000000</color>
-    <color name="icon_color">#777E80</color>
+    <color name="icon_color">#FFFFFF</color>
     <color name="searchview_text_color">#FFFFFF</color>
     <color name="min_score_color">#8022D11B</color>
     <color name="max_score_color">#80FF0000</color>
