--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,10 +7,11 @@
     </style>
 
     <style name="AlertDialogStyle" parent="ThemeOverlay.AppCompat.Dialog.Alert">
-        <item name="android:windowBackground">@color/black</item>
+        <item name="android:windowBackground">@color/main_background_color</item>
         <item name="android:textColor">@color/delete_color</item>
         <item name="android:buttonBarNegativeButtonStyle">@style/NegativeButtonStyle</item>
         <item name="android:buttonBarPositiveButtonStyle">@style/PositiveButtonStyle</item>
+        <item name="android:color">@style/PositiveButtonStyle</item>
 
     </style>
 
