--- a/app/src/main/res/layout/fragment_finished_partner_game.xml
+++ b/app/src/main/res/layout/fragment_finished_partner_game.xml
@@ -15,9 +15,7 @@
         android:background="@drawable/searchview_border"
         android:layoutDirection="rtl"
         app:closeIcon="@drawable/ic_close"
-        android:layout_marginTop="68dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_margin="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
