--- a/app/src/main/res/layout/fragment_finished_single_game.xml
+++ b/app/src/main/res/layout/fragment_finished_single_game.xml
@@ -12,9 +12,7 @@
         android:id="@+id/searchView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_margin="16dp"
         android:background="@drawable/searchview_border"
         android:layoutDirection="rtl"
         app:closeIcon="@drawable/ic_close"
