--- a/app/src/main/res/layout/partner_game_round_item.xml
+++ b/app/src/main/res/layout/partner_game_round_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,9 +13,11 @@
         app:boxStrokeColor="@color/text_input_layout_box_stroke_color"
         app:boxStrokeWidth="0dp"
         android:id="@+id/team1ScoreHint">
+
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/team1Score"
-            style="@style/ScoreTextInputEditTextStyle" />
+            style="@style/ScoreTextInputEditTextStyle"
+            tools:ignore="DuplicateSpeakableTextCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <include
