--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -75,9 +75,9 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:text">@string/player</item>
         <item name="android:textColor">@color/name_text_color</item>
-        <item name="android:textSize">17sp</item>
+        <item name="android:textSize">14sp</item>
         <item name="android:textStyle">normal</item>
-        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginTop">12dp</item>
 
     </style>
 
@@ -170,7 +170,7 @@
     <style name="VerticalSeparatorStyle">
         <item name="android:background">@color/separator_color</item>
         <item name="android:layout_width">0.5dp</item>
-        <item name="android:layout_height">40dp</item>
+        <item name="android:layout_height">30dp</item>
         <item name="android:layout_margin">16dp</item>
 
     </style>
@@ -179,7 +179,11 @@
         <item name="android:background">@color/separator_color</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">0.5dp</item>
-        <item name="android:layout_margin">8dp</item>
+        <item name="android:layout_marginTop">16dp</item>
+        <item name="android:layout_marginStart">8dp</item>
+        <item name="android:layout_marginEnd">8dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
+
         <item name="android:gravity">center</item>
     </style>
 
@@ -190,7 +194,10 @@
         <item name="android:textColor">@color/info_text_color</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textSize">13sp</item>
-        <item name="android:layout_margin">8dp</item>
+        <item name="android:layout_marginTop">16dp</item>
+        <item name="android:layout_marginStart">8dp</item>
+        <item name="android:layout_marginEnd">8dp</item>
+        <item name="android:layout_marginBottom">8dp</item>
         <item name="android:drawablePadding">8dp</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:drawableLeft">@drawable/ic_trophy</item>
